<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioDebugger</string>
    <string name="action_settings">Settings</string>
    <string name="title_summary">Summary</string>
    <string name="title_system_test">System Test</string>
    <string name="title_playback">Playback Test</string>
    <string name="summary_device">Device:</string>
    <string name="btn_request_focus">Request Audio Focus</string>
    <string name="btn_abandon_focus">Abandon Audio Focus</string>
    <string name="summary_ringer_mode">Ringer Mode:</string>
    <string name="btn_test_playback">Test Playback (you should hear sonar.ogg after click)</string>
    <string name="btn_set_speaker_phone">Route to Speaker Phone</string>
    <string name="summary_unmute">Mute/Unmute Stream:</string>
    <string name="btn_stream_voice_call">Voice Call</string>
    <string name="btn_stream_system">System</string>
    <string name="btn_stream_ring">Ring</string>
    <string name="btn_stream_music">Music</string>
    <string name="btn_stream_alarm">Alarm</string>
    <string name="btn_stream_dtmf">DTMF</string>
    <string name="btn_stream_notification">Notification</string>

</resources>